--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -10,15 +10,19 @@
        <h1 class="mt-5">Witaj w mojej bibliotece filmów</h1>
        <p class="lead">Znajdziesz tutaj tylko najlepsze tytuły!</p>
    </div>
-   {% for movie in range (0,4) %}
+   {% for movie in movies %}
    <div class="col-lg-3 col-md-6 mb-4">
        <div class="card h-100">
            <img class="card-img-top" src="http://placehold.it/300x500" alt="">
            <div class="card-body">
-               <h4 class="card-title">Tytuł filmu</h4>
+               <h4 class="card-title">{{ movie.title }}</h4>
+           </div>
+           <div class="figure">
+            <img src="{{ tmdb_image_url(movie.poster_path, "w185") }}"
+               alt="The movie poster">
            </div>
            <div class="card-footer text-center">
-               <a href="#" class="btn btn-primary">Pokaż więcej</a>
+               <a href="{{ url_for('movie_details', movie_id=movie.id) }}">Pokaż więcej</a>
            </div>
        </div>
    </div>
