--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -10,6 +10,12 @@
        <h1 class="mt-5">Witaj w mojej bibliotece filmów</h1>
        <p class="lead">Znajdziesz tutaj tylko najlepsze tytuły!</p>
    </div>
+     <div class="col-lg-12 mb-4">
+        <a href="{{ url_for('homepage', list_type="now_playing") }}" class="btn btn-outline-info">Now Playing</a>
+         <a href="{{ url_for('homepage', list_type="popular") }}" class="btn btn-outline-info">Popular</a>
+         <a href="{{ url_for('homepage', list_type="top_rated") }}" class="btn btn-outline-info">Top Rated</a>
+         <a href="{{ url_for('homepage', list_type="upcoming") }}" class="btn btn-outline-info">Upcoming</a>
+    </div>
    {% for movie in movies %}
    <div class="col-lg-3 col-md-6 mb-4">
        <div class="card h-100">
